src/styles/index.css
@import 'tailwindcss';
@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url(https://db.onlinewebfonts.com/c/c4d8819fda4c3fd79e36cedcc8d422bb?family=Halyard+Display);

/* Custom font */
@font-face {
  font-family: 'Junicode';
  src: url('/fonts/JunicodeVF-Roman.woff2') format('woff2');
  font-weight: 300 800;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Junicode';
  src: url('/fonts/JunicodeVF-Italic.woff2') format('woff2');
  font-weight: 300 800;
  font-style: italic;
  font-display: swap;
}

:root {
  --font-sans: 'Inter', ui-sans-serif, system-ui, sans-serif;
  --font-heading: 'Junicode', serif;
}

@layer base {
  html {
    font-family: 'Inter', sans-serif;
  }

  h1 {
    font-family: 'Halyard Display', serif;
  }

  h2,
  h3 {
    font-family: 'Junicode', serif;
  }
}

/* Scroll container behaviour */
.scroll-container {
  scroll-snap-type: y mandatory;
  overflow-y: scroll;
  scroll-behavior: smooth;
}

html, body {
  height: 100%;
  overflow: hidden;
}

.scroll-container::-webkit-scrollbar {
  width: 0;
  background: transparent;
}

.sticky {
  scroll-snap-align: start;
}

